tests/valid/boolean_operators/or_false.rs
/*
return: 0
*/

main(): i32 {
    return 0 || 0;
}