tests/invalid/arrays/literal_zero_size.rs
/*
compilationExitCode: 3
*/

main(): i32 {
    [];
    return 0;
}